Add docs and syntax highlighting

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
   </div>
 
   <div class="download row">
-    <div class="metro rounded medium btn primary"><a href="#">Download Conductor.js</a></div>
+    <div class="metro rounded medium btn primary"><a href="https://github.com/tildeio/conductor.js/blob/master/dist/conductor-0.2.0.js.html
+
+">Download Conductor.js</a></div>
     <div class="metro rounded medium btn info"><a href="/docs">Read the Documentation</a></div>
   </div>
 
